# language-learner-tools

./: .gitattributes  .gitignore  AGENTS.md  CODEBASE_ARCHITECTURE.md  MAINTENANCE_BACKLOG.md  README.md  RELEASING.md  audio-recorder.php  audio-upload-form.php  build-offline-app-apk.bat  extract.sh  flashcard-script.js  flashcard-style.css  flashcard-widget.php  image-copyright-grid-shortcode.php  image-upload-form.php  language-learner-tools.css  language-learner-tools.php  language-switcher.php  release-plugin.bat  settings.php  tmp_de_translation_qa_pass2.py  word-audio-shortcode.php  word-grid-shortcode.php  words-post-type.php
admin/: missing-audio-admin-page.php
api/: deepl-api.php  openai-api.php
css/: admin-dashboard-menu.css  admin-tools-hub.css  audio-credit-grid.css  audio-image-matcher.css  audio-processor.css  audio-review.css  content-lesson-pages.css  dictionary-import-admin.css  dictionary-shortcode.css  dictionary-sources-admin.css  editor-hub.css  export-import-admin.css  flashcard-style.css  frontend-utility-menu.css  image-aspect-normalizer-admin.css  image-copyright-style.css  image-webp-optimizer-admin.css  ipa-fonts.css  ipa-keyboard-admin.css  language-learner-tools.css  language-switcher.css  login-window.css  non-admin-style.css  quiz-pages-style.css  quiz-pages.css  recording-interface.css  self-check-shared.css  site-sync-admin.css  site-tools.css  user-study-dashboard.css  vocab-lesson-admin.css  vocab-lesson-pages.css  vocab-lesson-word-options-modal.css  word-option-rules-admin.css  wordset-games.css  wordset-pages.css
docs/: AI_CRAWLER_SUPPORT.md  AI_DATA_CLEANUP.md  CACHE_FOLLOWUPS.md  CLI_AUTOMATION.md  LIVE_PLUGIN_UPDATE_HANDOFF.md  PERFORMANCE_ARCHITECTURE.md  PROMPT_CARD_PROGRESS_FOLLOWUPS.md  REST_AUTOMATION.md  STARTERENGLISH_LIVE_ISSUES_TODO.md  STARTERENGLISH_LIVE_TEST_TODO.md  WORD_OPTION_RULES_AUTOMATION_TODO.md  dictionary-source-page-copy.md
includes/: assets.php  bootstrap.php  flashcard-shell.php  login-window.php  offline-app-sync.php  privacy.php  teacher-classes.php  template-loader.php  user-progress-report-data.php  (+4 more)
offline-app-builder/android-overrides/app/src/main/jni/: CMakeLists.txt  lltools_whisper_jni.c
(+664 files in other folders)
